# seer-tf2

./: .gitignore  Cargo.toml  README.md
examples/: label.toml
src/: lib.rs  main.rs
src/net/: layers.rs  look.rs  mod.rs  movement.rs
training_data/labels/: label1.toml  label2.toml
